--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-stylus": "^0.20.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-notify": "^0.4.1",
     "load-grunt-tasks": "^2.0.0"
   }
 }
