--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,6 @@
   "homepage": "http://burtsev.me",
   "private": true,
   "dependencies": {
-    "normalize.css": "~3.0.2"
+    "normalize.styl": "~3.0.0"
   }
 }
