--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "burtsev.me",
   "version": "3.0.0",
   "description": "Home site of Alexander Burtsev",
-  "main": "index.js",
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:albburtsev/burtsev.me.git"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "bower install && grunt"
   },
   "author": "Alexander Burtsev",
   "license": "MIT",
