--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   "homepage": "http://burtsev.me",
   "private": true,
   "dependencies": {
-    "normalize.styl": "~3.0.0"
+    "normalize.styl": "~3.0.0",
+    "jquery": "~2.1.3"
   }
 }
