--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
   "private": true,
   "dependencies": {
     "normalize.styl": "~3.0.0",
-    "jquery": "~2.1.3"
+    "jquery": "~2.1.3",
+    "director": "~1.2.5"
   }
 }
