--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "grunt-contrib-stylus": "^0.20.0",
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-modernizr": "^0.6.0",
     "grunt-notify": "^0.4.1",
     "load-grunt-tasks": "^2.0.0",
     "time-grunt": "^1.0.0"
