--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "normalize.styl": "~3.0.0",
     "jquery": "~2.1.3",
-    "director": "~1.2.5"
+    "director": "~1.2.5",
+    "html5shiv": "~3.7.2",
+    "jquery-legacy": "jquery#1.9.1"
   }
 }
