--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-modernizr": "^0.6.0",
     "grunt-notify": "^0.4.1",
+    "grunt-pixrem": "^0.1.2",
     "load-grunt-tasks": "^2.0.0",
     "time-grunt": "^1.0.0"
   }
