--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-coffee": "^0.12.0",
     "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-imagemin": "^0.9.2",
     "grunt-contrib-stylus": "^0.20.0",
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
