--- a/burtsev.me.nginx.conf
+++ b/burtsev.me.nginx.conf
@@ -4,9 +4,9 @@ server {
 
 	gzip on;
 	charset utf-8;
-	access_log /home/sites/www/burtsev.me/logs/access.nginx.log main;
-	error_log /home/sites/www/burtsev.me/logs/error.nginx.log;
-	root /home/sites/www/burtsev.me/www/out;
+	access_log /home/sites/burtsev.me/logs/access.nginx.log main;
+	error_log /home/sites/burtsev.me/logs/error.nginx.log;
+	root /home/sites/burtsev.me/www/out;
 
 	location ~ /(about|portfolio|resume|contacts) {
 		try_files $uri /index.html;
