--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-coffee": "^0.12.0",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-imagemin": "^0.9.2",
     "grunt-contrib-stylus": "^0.20.0",
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-fingerprint": "^0.2.0",
     "grunt-modernizr": "^0.6.0",
     "grunt-notify": "^0.4.1",
     "grunt-pixrem": "^0.1.2",
