--- a/package.json
+++ b/package.json
@@ -1,36 +1,15 @@
 {
   "name": "burtsev.me",
-  "version": "3.0.0",
-  "description": "Home site of Alexander Burtsev",
+  "version": "4.0.0alpha",
+  "description": "Home page of Alexander Burtsev",
   "private": true,
   "repository": {
     "type": "git",
     "url": "git@github.com:albburtsev/burtsev.me.git"
   },
   "scripts": {
-    "postinstall": "bower install && grunt deploy"
+    "postinstall": "build"
   },
   "author": "Alexander Burtsev",
-  "license": "MIT",
-  "dependencies": {
-    "docpad": "~6.78.1",
-    "docpad-plugin-ect": "~2.0.1",
-    "docpad-plugin-marked": "~2.3.0"
-  },
-  "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-coffee": "^0.12.0",
-    "grunt-contrib-imagemin": "^0.9.2",
-    "grunt-contrib-stylus": "^0.20.0",
-    "grunt-contrib-uglify": "^0.7.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-fingerprint": "^0.2.0",
-    "grunt-modernizr": "^0.6.0",
-    "grunt-notify": "^0.4.1",
-    "grunt-pixrem": "^0.1.2",
-    "grunt-shell": "^1.1.1",
-    "load-grunt-tasks": "^2.0.0",
-    "time-grunt": "^1.0.0"
-  }
+  "license": "MIT"
 }
